<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TPGames</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Course title -->
    <string name="cs51">CS51 Final Project</string>

    <!-- Title of the project -->
    <string name="projectTitle">Two Player Perfect Information Games</string>

    <!-- Names of the contributors -->
    <string name="dennis">Dennis Cui</string>
    <string name="marcus">Marcus Schorow</string>
    <string name="derek">Derek DiNardo</string>

    <!-- Name of the game -->
    <string name="ttt">Tic Tac Toe</string>
    <string name="connect4">Connect Four</string>
    <string name="checkers">Checkers</string>
    <string name="chess">Chess</string>

</resources>