<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".SplashActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/projectTitle"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/cs51"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dennis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/course"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dennis"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/derek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dennis"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/derek"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/derek"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/marcus"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>